src/components/presentation/overlays/ViewsOverlay/ViewsOverlay.css
.ptr-overlay.ptr-overlay-views {
	padding: 0;
	top: 45px; /* todo remove */
	/*flex-direction: row;*/

	background-image: linear-gradient(160deg, rgba(33,38,53,1) 0%, rgba(33,38,53,1) 40%, rgba(55,41,57,1) 100%);
}

.ptr-overlay-views-top-bar {
	height: 3rem;
	display: flex;
	justify-content: space-between;
	padding: .5rem 1rem;
}
.ptr-overlay-views-top-bar-user {
	flex-grow: 0;
}

.ptr-overlay-views-content {
	display: flex;
	flex-direction: row;
}

/* Scopes list */
.scopes-list {
	display: flex;
	flex-direction: column;
	width: 30%;
	min-width: 25rem;
	max-width: 30rem;
	margin: 3rem 0;
	padding-top: 5px;
	overflow: auto;
}

/* Scrollbar */
.scopes-list::-webkit-scrollbar {
	width: 12px;
	margin-right: 5px;
}
.scopes-list::-webkit-scrollbar-track {
	background-color: #414551;
	border-radius: 5px;
}
.scopes-list::-webkit-scrollbar-thumb {
	background: #6a6e78;
	border-radius: 5px;
}

/* Items */
.scopes-list-item {
	padding-left: 2.5rem;
	cursor: pointer;
	font-size: 1.1rem;
	font-weight: 300;
	font-family: "Roboto", sans-serif;
	color: rgb(204,207,211);
	line-height: 3.2rem;
	transition: background-color .3s;
}
.scopes-list-item:hover {
	background: rgba(153,54,75,.2);
}
.scopes-list-item.active {
	background: rgba(153,54,75,.6);
}

/* Scopes intro box */
.scope-intro-box {
	background: white;
	box-shadow: 0 0 2px 2px rgba(33,38,53,.5);
	width: 100%;
	margin: 2rem 4rem 2rem 0;
}

